--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "chat-masala-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "This bot will give answers for all questions on this website",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Imversion/chat-masala-bot.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["insertBotButton"],
+  "author": "Imversion",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Imversion/chat-masala-bot/issues"
